--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8090
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
-#logging.file=boot
-#logging.path=./logs/
+logging.file=boot.log
+logging.path=./logs/
 #thymeleaf start
 #spring.thymeleaf.mode=HTML5
 #spring.thymeleaf.encoding=UTF-8
