1、修改路径，是的freemarker和jsp都可以映射到view

--- a/pom.xml
+++ b/pom.xml
@@ -91,20 +91,11 @@
 		<!-- end -->
 		
 		<!-- begin:引入这些包，默认就开启jsp view -->
-		<!-- 
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<scope>provided</scope>
-		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.aspectj</groupId>
-			<artifactId>aspectjweaver</artifactId>
-		</dependency>
+		<!-- Provided -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
@@ -115,7 +106,7 @@
 			<artifactId>tomcat-embed-jasper</artifactId>
 			<scope>provided</scope>
 		</dependency>
-		 -->
+		
 		<!-- end -->
 	
 	</dependencies>
