--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
+#spring.data.elasticsearch.properties.path.home=/foo/bar
+spring.data.elasticsearch.cluster-nodes=localhost:9300
+spring.data.elasticsearch.repositories.enabled=true
+
+#spring.elasticsearch.jest.uris=http://search.example.com:9200
+#spring.elasticsearch.jest.read-timeout=10000
+#spring.elasticsearch.jest.username=user
+#spring.elasticsearch.jest.password=secret
 server.port=8090
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
