--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cn.lijuntao</groupId>
-	<artifactId>boot</artifactId>
+	<artifactId>spring-boot-elasticsearch</artifactId>
 	<version>1.0</version>
-	<name>myBoot</name>
-	<description>myBoot</description>
+	<name>boot-elasticsearch</name>
+	<description>boot-elasticsearch</description>
 	<packaging>war</packaging>
 	<properties>
 		<webVersion>3.1</webVersion>
