--- a/boot-elasticsearch/pom.xml
+++ b/boot-elasticsearch/pom.xml
@@ -47,6 +47,12 @@
 			<artifactId>spring-data-elasticsearch</artifactId>
 		</dependency>
 		
+		<dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>transport</artifactId>
+            <version>5.2.1</version>
+        </dependency>
+		
 		<!-- <dependency>
            <groupId>org.elasticsearch</groupId>
            <artifactId>elasticsearch</artifactId>
